refactor(govdata): migrate to FileSchema-based architecture
Major architectural refactoring of GovData adapter:
- Replace custom EconSchema with FileSchema delegation
- Consolidate data downloaders with improved error handling
- Add JSON-based schema configuration for geo and econ data
- Remove redundant ParquetStorageHelper (functionality in FileSchema)
- Improve cache manifest with better metadata tracking

Key improvements:
- Unified architecture with file adapter for consistency
- Better partition support through FileSchema infrastructure
- Improved error recovery and logging in downloaders
- Cleaner separation between data fetching and schema management
- Enhanced test coverage with comprehensive validation

Data source enhancements:
- BEA: Better NIPA table handling and error recovery
- BLS: Improved series discovery and caching
- FRED: More robust API interaction
- Treasury/World Bank: Better data transformation
- GEO: Streamlined shapefile conversion

This refactoring reduces code duplication and leverages the
robust FileSchema infrastructure for better reliability.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>